objects/Potential_Future_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JLOC__c</fullName>
        <label>JLOC</label>
        <referenceTo>JLOC__c</referenceTo>
        <relationshipLabel>Potential Future Opportunities</relationshipLabel>
        <relationshipName>Potential_Future_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Probability_Weighted_Revenue__c</fullName>
        <formula>Revenue__c  *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability Weighted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_weighted_RWA__c</fullName>
        <formula>RWA__c  *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability weighted RWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWA__c</fullName>
        <label>RWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Potential Future Opportunity</label>
    <nameField>
        <displayFormat>PFO-{000000}</displayFormat>
        <label>Potential Future Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Future Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>